[package]
name = "deadband-snr"
version = "0.1.0"
edition = "2021"
description = "Deadband filtering — threshold-based sparsity filter. NOT a low-pass filter. Exploits temporal sparsity."
license = "MIT"
keywords = ["deadband", "filter", "snr", "sparse", "signal-processing"]
categories = ["science", "algorithms"]

[dev-dependencies]
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
